# assfire-suite

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  apps.yml
api-model/: CMakeLists.txt
api-model/assfire/api/v1/routing/: routing.proto
api-model/assfire/api/v1/sample/: sample.proto
apps/amqp-connector/: CMakeLists.txt
apps/amqp-connector/assfire/util/amqp/: AmqpChannel.cpp  AmqpChannel.hpp  AmqpChannelPool.hpp  AmqpConnection.cpp  AmqpConnection.hpp  AmqpConnectionOpts.hpp  AmqpConnectionPool.cpp  AmqpConnectionPool.hpp  AmqpConsumer.hpp  AmqpConsumerOpts.hpp  AmqpDelivery.hpp  (+12 more)
apps/assfire-router/: CMakeLists.txt  Dockerfile  WinSockHelper.hpp  pipeline.yml
apps/assfire-router/client/: CMakeLists.txt
apps/assfire-router/client/assfire-router/: DistanceMatrix.hpp  RoutingClient.hpp  client.hpp
apps/assfire-router/client/assfire_router/: DistanceMatrixBackend.hpp
apps/assfire-router/client/tests/: CMakeLists.txt  ClientIntegrationTest.cpp  RedisCacheIntegrationTest.cpp
apps/assfire-router/grpc/: CMakeLists.txt
apps/assfire-router/helm/: CMakeLists.txt
apps/assfire-router/helm/assfire-router/: Chart.yaml
apps/assfire-router/helm/templates/: deployment.yaml
apps/assfire-router/server/: CMakeLists.txt  CoordinatesDecoder.hpp  Router.hpp  RoutingMetricsCollector.cpp  RoutingService.cpp  RoutingService.hpp  main.cpp
apps/assfire-router/server/tests/: CMakeLists.txt  EuclideanRouterTest.cpp  RandomRouterTest.cpp
apps/assfire-router/tools/: CMakeLists.txt
apps/assfire-router/tools/maptest/: package-lock.json  package.json
apps/concepts/api-cpp/: CMakeLists.txt
apps/estimator/api/: CMakeLists.txt
apps/estimator/engine/: CMakeLists.txt
apps/locations/api/: CMakeLists.txt
apps/osrm/api/: CMakeLists.txt
apps/osrm/engine/: CMakeLists.txt
apps/osrm/server/: CMakeLists.txt  main.cpp
apps/redis-connector/: CMakeLists.txt
apps/router/: CMakeLists.txt  Dockerfile  pipeline.yml
apps/router/api/: CMakeLists.txt  service.proto
apps/router/client/: CMakeLists.txt
apps/router/client/assfire-router/: DistanceMatrixStrategy.hpp
apps/router/client/tests/: ClientIntegrationTest.cpp  RedisCacheIntegrationTest.cpp
apps/router/docker/: CMakeLists.txt  server.Dockerfile
apps/router/engine/: CMakeLists.txt
apps/router/engine/tests/: CMakeLists.txt  CrowflightRouteProviderEngineTest.cpp  MockCache.cpp  MockCache.hpp  MockCacheConnector.cpp  MockCacheConnector.hpp  MockOsrmConnector.cpp  MockRouteProviderEngine.cpp  MockRouteProviderEngine.hpp  OsrmReplies.hpp  OsrmRouteProviderEngineTest.cpp  RandomRouteProviderEngineTest.cpp  RedisRouteProviderEngineTest.cpp  RouteProviderEngineTestFixtureBase.hpp
apps/router/gateway/: CMakeLists.txt  assfire-router-grpc-proxy.go  go.mod
apps/router/go/: CMakeLists.txt
apps/router/go/gateway/: CMakeLists.txt
apps/router/go/proto/: CMakeLists.txt
apps/router/helm/: CMakeLists.txt
apps/router/helm/assfire-router/: Chart.yaml  values.yaml
apps/router/integrations/: CMakeLists.txt
apps/router/integrations/osrm/: CMakeLists.txt
apps/router/proto/: CMakeLists.txt
apps/router/server/: CMakeLists.txt  RoutingService.hpp  main.cpp
apps/router/server/tests/: EuclideanRouterTest.cpp
apps/router/tests/: CMakeLists.txt
apps/router/tests/api/: DirectRequestDistanceMatrixEngineTest.cpp  DistanceMatrixTest.cpp  FullMatrixCacheDistanceMatrixEngineTest.cpp
apps/router/tests/client/: GrpcRouteProviderEngineTest.cpp  MockProtobufClient.cpp  MockProtobufClient.hpp
apps/router/tests/engine/: CrowflightRouteProviderEngineTest.cpp  EuclideanRouteProviderEngineTest.cpp  MockCache.hpp  MockCacheConnector.hpp  MockOsrmConnector.cpp  MockOsrmConnector.hpp  MockRouteProviderEngine.cpp  MockRouteProviderEngine.hpp  OsrmReplies.hpp  OsrmRouteProviderEngineTest.cpp  RandomRouteProviderEngineTest.cpp  RedisRouteProviderEngineTest.cpp  RouteProviderEngineTestFixtureBase.hpp
apps/router/tools/: CMakeLists.txt
apps/router/tools/maptest/: CMakeLists.txt  Dockerfile  nginx.conf
apps/sample/: CMakeLists.txt  Dockerfile  pipeline.yml
apps/sample/api/: CMakeLists.txt  service.proto
apps/sample/client/: CMakeLists.txt
apps/sample/engine/: CMakeLists.txt  Greeter.cpp  MetricsCollector.cpp
apps/sample/gateway/: CMakeLists.txt  assfire-sample-grpc-proxy.go  go.mod  service.yaml
apps/sample/helm/: CMakeLists.txt
apps/sample/helm/assfire-sample/: Chart.yaml  values.yaml
apps/sample/server/: CMakeLists.txt  GreeterService.cpp  GreeterService.h  main.cpp
routes_provider/: CMakeLists.txt  CoordinatesDecoder.hpp  Dockerfile  Router.hpp  RoutingMetricsCollector.cpp  RoutingMetricsCollector.hpp  RoutingService.cpp  RoutingService.hpp  main.cpp  routing.proto
routes_provider/backends/crowflight/: CrowflightRouter.cpp  CrowflightRouter.hpp
routes_provider/backends/euclidean/: EuclideanRouter.cpp  EuclideanRouter.hpp
routes_provider/backends/random/: RandomRouter.cpp  RandomRouter.hpp
routes_provider/backends/redis/: RedisProxy.cpp  RedisProxy.hpp  RouterProxy.hpp  TransparentProxy.hpp
routes_provider/client/assfire_router/: Location.hpp
routes_provider/client/assfire_router/backends/: DirectRequestBackend.cpp  DirectRequestBackend.hpp
routes_provider/client/assfire_router/grpc_client/: GrpcClient.cpp  GrpcClient.hpp
routes_provider/client/assfire_router/settings/: RandomSettings.hpp  RouteRequestSettings.hpp
routes_provider/client/tests/: CMakeLists.txt
routes_provider/helm/: Chart.yaml  values.yaml
routes_provider/helm/templates/: api-ingress.yaml  assfire-router.yaml  deployment.yaml  grpc-ingress.yaml  http-ingress.yaml  ingress.yaml  service.yaml
routes_provider/tests/: EuclideanRouterTest.cpp  RandomRouterTest.cpp
routes_provider/tools/maptest/: package.json
routes_provider/tools/maptest/public/: index.html
routes_provider/tools/maptest/src/: index.css  index.js
routing/: CMakeLists.txt  CoordinatesDecoder.hpp  Router.hpp  RoutingService.cpp  RoutingService.hpp  main.cpp  routing.proto
routing/backends/euclidean/: EuclideanRouter.cpp  EuclideanRouter.hpp
(+850 files in other folders)
